--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ protocolize = "2.2.4"
 # Plugins
 blossom = "1.3.1"
 runvelocity = "2.0.1"
+shadow = "7.1.2"
 
 [libraries]
 
@@ -23,3 +24,4 @@ protocolize = { module = "dev.simplix:protocolize-api", version.ref = "protocoli
 
 blossom = { id = "net.kyori.blossom", version.ref = "blossom" }
 runvelocity = { id = "xyz.jpenilla.run-velocity", version.ref = "runvelocity" }
+shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
