--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -2,8 +2,8 @@
 
 # Removes the player's signed key information,
 # so Velocity and plugins will consider this player as UnSigned
-remove-signed-key-on-join = false
+remove-signed-key-on-join = true
 
 # Removes the information that a command was signed.
 # This prevents Velocity from kicking the player if a plugin cancels the command
-remove-signed-command-information = false
+remove-signed-command-information = true
