--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 group = me.adrianed.unsignedvelocity
-version = 1.0.0
+version = 1.1.0-SNAPSHOT
 description = Test
 url = https://github.com/4drian3d/UnSignedVelocity
