--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,9 +5,8 @@ metadata.format.version = "1.1"
 # Compile only
 velocity = "3.2.0-SNAPSHOT"
 bstats = "3.0.1"
-protocolize = "2.2.5"
+netty = "4.1.87.Final"
 
-# Plugins
 blossom = "1.3.1"
 runvelocity = "2.0.1"
 shadow = "7.1.2"
@@ -18,7 +17,7 @@ shadow = "7.1.2"
 velocity-api = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
 velocity-proxy = { group = "com.velocitypowered", name = "velocity-proxy", version.ref = "velocity" }
 bstats = { module = "org.bstats:bstats-velocity", version.ref = "bstats" }
-protocolize = { module = "dev.simplix:protocolize-api", version.ref = "protocolize" }
+netty = { module = "io.netty:netty-all", version.ref = "netty" }
 
 [plugins]
 
