misc: changed package

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group = me.adrianed.unsignedvelocity
+group = io.github._4drian3d.unsignedvelocity
 version = 1.1.0-SNAPSHOT
-description = Test
+description = Remove Signed Information from your Velocity Commands
 url = https://github.com/4drian3d/UnSignedVelocity
