--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ blossom = "1.3.1"
 runvelocity = "2.0.1"
 shadow = "7.1.2"
 
+vpacketevents = "1.0.0"
+
 [libraries]
 
 # Compile Only Dependencies
@@ -18,6 +20,7 @@ velocity-api = { group = "com.velocitypowered", name = "velocity-api", version.r
 velocity-proxy = { group = "com.velocitypowered", name = "velocity-proxy", version.ref = "velocity" }
 bstats = { module = "org.bstats:bstats-velocity", version.ref = "bstats" }
 netty = { module = "io.netty:netty-all", version.ref = "netty" }
+vpacketevents = { group = "io.github.4drian3d", name = "vpacketevents-api", version.ref = "vpacketevents" }
 
 [plugins]
 
