--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 group = io.github._4drian3d.unsignedvelocity
-version = 1.2.0-SNAPSHOT
+version = 1.2.0
 description = Remove Signed Information from your Velocity Commands
 url = https://github.com/4drian3d/UnSignedVelocity
