feat: added support for chat messages

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -7,3 +7,8 @@ remove-signed-key-on-join = true
 # Removes the information that a command was signed.
 # This prevents Velocity from kicking the player if a plugin cancels the command
 remove-signed-command-information = true
+
+# Allows cancellation and modification of chat messages for players with version 1.19.1 or higher.
+# This option may have incompatibilities with plugins that handle packets,
+# if you have any problems, first contact UnSignedVelocity support
+apply-chat-messages = true
