feat: add Send secure-chat data feature

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -12,3 +12,7 @@ remove-signed-command-information = true
 # This option may have incompatibilities with plugins that handle packets,
 # if you have any problems, first contact UnSignedVelocity support
 apply-chat-messages = true
+
+# This will send information to the client about whether the proxy or server has secure chat enabled.
+# Not tested for functionality with pirate clients
+send-secure-chat-data = false
