--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -1,18 +1,19 @@
 # UnSignedVelocity | by 4drian3d
 
 # Removes the player's signed key information,
-# so Velocity and plugins will consider this player as UnSigned
+# so Velocity and plugins will consider this player as UnSigned.
 remove-signed-key-on-join = true
 
-# Removes the information that a command was signed.
-# This prevents Velocity from kicking the player if a plugin cancels the command
+# Allows cancellation and modification of commands for players with version 1.19.1 or higher.
+# This option may have incompatibilities with plugins that handle command packets on Velocity,
+# if you have any problems, first contact UnSignedVelocity support.
 remove-signed-command-information = true
 
 # Allows cancellation and modification of chat messages for players with version 1.19.1 or higher.
-# This option may have incompatibilities with plugins that handle packets,
-# if you have any problems, first contact UnSignedVelocity support
+# This option may have incompatibilities with plugins that handle chat packets on Velocity,
+# if you have any problems, first contact UnSignedVelocity support.
 apply-chat-messages = true
 
 # This will send information to the client about whether the proxy or server has secure chat enabled.
-# Not tested for functionality with pirate clients
+# Not tested for functionality with pirate clients.
 send-secure-chat-data = false
