--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ runvelocity = "2.0.1"
 shadow = "8.1.1"
 
 vpacketevents = "1.0.1"
+velocityhexlogger = "1.0.2"
 
 [libraries]
 
@@ -21,6 +22,7 @@ velocity-proxy = { group = "com.velocitypowered", name = "velocity-proxy", versi
 bstats = { module = "org.bstats:bstats-velocity", version.ref = "bstats" }
 netty = { module = "io.netty:netty-all", version.ref = "netty" }
 vpacketevents = { group = "io.github.4drian3d", name = "vpacketevents-api", version.ref = "vpacketevents" }
+velocityhexlogger = { module = "io.github.4drian3d:velocityhexlogger", version.ref = "velocityhexlogger" }
 
 [plugins]
 
