--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,6 @@ metadata.format.version = "1.1"
 # Compile only
 velocity = "3.2.0-SNAPSHOT"
 bstats = "3.0.2"
-netty = "4.1.91.Final"
 
 blossom = "1.3.1"
 runvelocity = "2.0.1"
@@ -19,8 +18,8 @@ velocityhexlogger = "1.0.2"
 # Compile Only Dependencies
 velocity-api = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
 velocity-proxy = { group = "com.velocitypowered", name = "velocity-proxy", version.ref = "velocity" }
+# Included dependencies
 bstats = { module = "org.bstats:bstats-velocity", version.ref = "bstats" }
-netty = { module = "io.netty:netty-all", version.ref = "netty" }
 vpacketevents = { group = "io.github.4drian3d", name = "vpacketevents-api", version.ref = "vpacketevents" }
 velocityhexlogger = { module = "io.github.4drian3d:velocityhexlogger", version.ref = "velocityhexlogger" }
 
