ci: Added Upload Artifact action

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,3 +23,8 @@ jobs:
           timeout_minutes: 5
           max_attempts: 2
           command: gradle clean build
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: VPacketEvents
+          path: build/libs/UnSignedVelocity-*.jar
