--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: VPacketEvents
+          name: UnSignedVelocity
           path: build/libs/UnSignedVelocity-*.jar
